fixed a bug where text overlaps title

--- a/src/App.css
+++ b/src/App.css
@@ -70,8 +70,8 @@ body {
 }
 
 .results {
-  margin-left: 20px;
-  margin-right: 20px;
+  position: relative;
+  margin: 100px;
   padding-top: 50px;
   font-family: 'Libre Baskerville', serif;
   font-size: 25px;
